# csg_recovery

./: .gitignore  Readme.md
data/: test.xyzn
segmentation/: CMakeLists.txt
segmentation/src/GfxTL/: VectorXD.h
utils/: sdf_eval_main.cpp
